--- a/app.json
+++ b/app.json
@@ -3,29 +3,23 @@
     "name": "nutri-edge",
     "slug": "nutri-edge",
     "version": "1.0.0",
-    
-      "scheme": "nutri-edge",
-      "web": {
-        "bundler": "metro",
-        "output": "static",
-        "favicon": "./assets/favicon.png"
-      },
-      "plugins": [
+    "scheme": "nutri-edge",
+    "web": {
+      "bundler": "metro",
+      "output": "static",
+      "favicon": "./assets/favicon.png"
+    },
+    "plugins": [
       "expo-router",
-      
+      "expo-font"
     ],
-      "experiments": {
-        "typedRoutes": true
-        
-          ,"tsconfigPaths": true
-        
-      },
-    
+    "experiments": {
+      "typedRoutes": true,
+      "tsconfigPaths": true
+    },
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    
     "userInterfaceStyle": "automatic",
-     
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
