--- a/package.json
+++ b/package.json
@@ -24,11 +24,8 @@
     "@react-navigation/native": "^6.1.7",
     "@roninoss/icons": "^0.0.4",
     "@shopify/flash-list": "1.6.3",
-<<<<<<< Updated upstream
-=======
     "@tamagui/babel-plugin": "^1.99.1",
     "@tamagui/config": "^1.99.1",
->>>>>>> Stashed changes
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "expo": "~50.0.7",
@@ -55,15 +52,11 @@
     "react-native-uitextview": "^1.1.4",
     "react-native-web": "~0.19.10",
     "tailwind-merge": "^2.2.1",
-<<<<<<< Updated upstream
     "zeego": "^1.9.1",
     "zod": "^3.23.8",
-    "zustand": "^4.5.2"
-=======
+    "zustand": "^4.5.2",
     "tamagui": "^1.99.1",
-    "zeego": "^1.9.1",
     "expo-font": "~11.10.3"
->>>>>>> Stashed changes
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
