--- a/package.json
+++ b/package.json
@@ -14,49 +14,49 @@
     "@expo/react-native-action-sheet": "^4.0.1",
     "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "^4",
-    "@react-native-community/datetimepicker": "7.7.0",
-    "@react-native-community/slider": "4.4.2",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-community/slider": "4.5.2",
     "@react-native-menu/menu": "^0.9.1",
-    "@react-native-picker/picker": "2.6.1",
-    "@react-native-segmented-control/segmented-control": "2.4.1",
+    "@react-native-picker/picker": "2.7.5",
+    "@react-native-segmented-control/segmented-control": "2.5.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.7",
     "@roninoss/icons": "^0.0.4",
-    "@shopify/flash-list": "1.6.3",
+    "@shopify/flash-list": "1.6.4",
     "@tamagui/babel-plugin": "^1.99.1",
     "@tamagui/config": "^1.99.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "expo": "~50.0.7",
-    "expo-constants": "~15.4.5",
-    "expo-dev-client": "~3.3.8",
-    "expo-linking": "~6.2.2",
-    "expo-navigation-bar": "~2.8.1",
+    "expo": "^51.0.10",
+    "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.15",
+    "expo-font": "~12.0.6",
+    "expo-linking": "~6.3.1",
+    "expo-navigation-bar": "~3.0.5",
     "expo-router": "^3.4.7",
-    "expo-status-bar": "~1.11.1",
-    "expo-store-review": "~6.8.3",
-    "expo-system-ui": "~2.9.3",
-    "expo-web-browser": "~12.8.2",
+    "expo-status-bar": "~1.12.1",
+    "expo-store-review": "~7.0.2",
+    "expo-system-ui": "~3.0.5",
+    "expo-web-browser": "~13.0.3",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-ios-context-menu": "^2.5.0",
     "react-native-ios-utilities": "^4.4.0",
-    "react-native-pager-view": "6.2.3",
-    "react-native-reanimated": "~3.6.2",
+    "react-native-pager-view": "6.3.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-screens": "3.31.1",
     "react-native-uitextview": "^1.1.4",
     "react-native-web": "~0.19.10",
     "tailwind-merge": "^2.2.1",
+    "tamagui": "^1.99.1",
     "zeego": "^1.9.1",
     "zod": "^3.23.8",
-    "zustand": "^4.5.2",
-    "tamagui": "^1.99.1",
-    "expo-font": "~11.10.3"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -69,7 +69,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.4.5"
+    "typescript": "~5.3.3"
   },
   "eslintConfig": {
     "extends": "universe/native"
