--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "expo-store-review": "~7.0.2",
     "expo-system-ui": "~3.0.5",
     "expo-web-browser": "~13.0.3",
+    "lucide-react-native": "^0.390.0",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
