--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,9 +8,13 @@ environment:
 
 dependencies:
   bounce_tap: ^1.0.2
+  carousel_slider: ^4.2.1
   flutter:
     sdk: flutter
+  fluttertoast: ^8.2.6
   get: ^4.6.6
+  google_generative_ai: ^0.4.3
+  http: ^1.2.1
   line_icons: ^2.0.3
 
 dev_dependencies:
@@ -22,3 +26,5 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+    - assets/avatars/
+    - assets/diet-logos/
